k8s/base/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retailops-api
  namespace: retailops
  labels:
    app.kubernetes.io/name: retailops-api
    app.kubernetes.io/part-of: retailops-platform
    app.kubernetes.io/component: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: retailops.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: retailops-api
                port:
                  name: http
