k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retailops-frontend
  namespace: retailops
  labels:
    app.kubernetes.io/name: retailops-frontend
    app.kubernetes.io/part-of: retailops-platform
    app.kubernetes.io/component: frontend-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: retailops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retailops-frontend
                port:
                  name: http
